--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                <li> i develope and also maintain the user interface </li>
                <li> implementing designs on websites </li>
             </ul>
-           <a href="#"><button>hire me</button></a> 
+           <a href="mujibajimoh@gmail.com"><button>hire me</button></a> 
         </section>
         <!--div>end of my-services section </div-->
 
@@ -103,8 +103,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="google.com"> <div id="code">view code</div> </a>
-                        <a href="netnaija.com"> <div id="live-site"> view site</div> </a>
+                        <a href="#"> <div id="code">view code</div> </a>
+                        <a href="#"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
 
@@ -121,8 +121,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="google.com"> <div id="code">view code</div> </a>
-                        <a href="netnaija.com"> <div id="live-site"> view site</div> </a>
+                        <a href="#"> <div id="code">view code</div> </a>
+                        <a href="#"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
 
@@ -141,8 +141,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="google.com"> <div id="code">view code</div> </a>
-                        <a href="netnaija.com"> <div id="live-site"> view site</div> </a>
+                        <a href="#"> <div id="code">view code</div> </a>
+                        <a href="#"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
 
@@ -180,11 +180,11 @@
             <h1>contacts</h1>
 
             <div class="contact-address">
-                <a href="#"> 
+                <a href="https://twitter.com/Ashtagmujib"> 
                     <div id="x"> X </div> 
                 </a>
 
-                <a href="#"> 
+                <a href="mujibajimoh@gmail.com"> 
                     <div id="gmail"> gmail </div> 
                 </a>
 
