--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                <li> i develope and also maintain the user interface </li>
                <li> implementing designs on websites </li>
             </ul>
-           <a href="mujibajimoh@gmail.com"><button>hire me</button></a> 
+           <a href="https://mail.google.com/mail/mu/mp/91/#co"><button>hire me</button></a> 
         </section>
         <!--div>end of my-services section </div-->
 
