--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                <li> i develope and also maintain the user interface </li>
                <li> implementing designs on websites </li>
             </ul>
-           <a href="https://mail.google.com/mail/mu/mp/91/#co"><button>hire me</button></a> 
+           <a href="mailto:mujibajimoh@gmail.com"><button>hire me</button></a> 
         </section>
         <!--div>end of my-services section </div-->
 
@@ -184,7 +184,7 @@
                     <div id="x"> X </div> 
                 </a>
 
-                <a href="mujibajimoh@gmail.com"> 
+                <a href="mailto:mujibajimoh@gmail.com"> 
                     <div id="gmail"> gmail </div> 
                 </a>
 
