--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
                 <div class="slide">
                     <div class="image"></div>
-                    <h3>project title</h3>
+                    <h3>crowdfunding page</h3>
                     <div class="slide-dts">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing 
+                            a front-end mentor challange onsectetur adipisicing 
                             elit. Distinctio inventore, minus eius optio 
                             perspiciatis voluptatum. Accusantium odio repellendus 
                             est labore tenetur, architecto, eos quam dignissimos enim cupiditate officiis saepe quae?
@@ -110,27 +110,7 @@
 
                 <div class="slide">
                     <div class="image"></div>
-                    <h3>project title</h3>
-                    <div class="slide-dts">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing 
-                            elit. Distinctio inventore, minus eius optio 
-                            perspiciatis voluptatum. Accusantium odio repellendus 
-                            est labore tenetur, architecto, eos quam dignissimos enim cupiditate officiis saepe quae?
-                        </p>
-                    </div>
-
-                    <div class="links">
-                        <a href="#"> <div id="code">view code</div> </a>
-                        <a href="#"> <div id="live-site"> view site</div> </a>
-                    </div>
-                </div>
-
-
-
-                <div class="slide">
-                    <div class="image"></div>
-                    <h3>project title</h3>
+                    <h3>easybank landing page</h3>
                     <div class="slide-dts">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing 
@@ -147,9 +127,29 @@
                 </div>
 
 
+
                 <div class="slide">
                     <div class="image"></div>
-                    <h3>project title</h3>
+                    <h3>ecommerce product page</h3>
+                    <div class="slide-dts">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing 
+                            elit. Distinctio inventore, minus eius optio 
+                            perspiciatis voluptatum. Accusantium odio repellendus 
+                            est labore tenetur, architecto, eos quam dignissimos enim cupiditate officiis saepe quae?
+                        </p>
+                    </div>
+
+                    <div class="links">
+                        <a href="#"> <div id="code">view code</div> </a>
+                        <a href="#"> <div id="live-site"> view site</div> </a>
+                    </div>
+                </div>
+
+
+                <div class="slide">
+                    <div class="image"></div>
+                    <h3>room landing page</h3>
                     <div class="slide-dts">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing 
@@ -168,7 +168,7 @@
             </div>
 
             <div class="slide-direction">
-                <span></span>
+                <i>swipe</i>
             </div>
         </section>
         <!--div> </div-->
