--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="#"> <div id="code">view code</div> </a>
-                        <a href="#"> <div id="live-site"> view site</div> </a>
+                        <a href="https://github.com/ashtagmujib/Crowd-funding-page"> <div id="code">view code</div> </a>
+                        <a href="https://ashtagmujib.github.io/Crowd-funding-page/"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
 
@@ -122,8 +122,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="#"> <div id="code">view code</div> </a>
-                        <a href="#"> <div id="live-site"> view site</div> </a>
+                        <a href="https://github.com/ashtagmujib/easybank-landing-page"> <div id="code">view code</div> </a>
+                        <a href="https://ashtagmujib.github.io/easybank-landing-page/"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
 
@@ -142,8 +142,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="#"> <div id="code">view code</div> </a>
-                        <a href="#"> <div id="live-site"> view site</div> </a>
+                        <a href="https://github.com/ashtagmujib/E-commerce-page"> <div id="code">view code</div> </a>
+                        <a href="https://ashtagmujib.github.io/E-commerce-page/"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
 
@@ -161,8 +161,8 @@
                     </div>
 
                     <div class="links">
-                        <a href="#"> <div id="code">view code</div> </a>
-                        <a href="#"> <div id="live-site"> view site</div> </a>
+                        <a href="https://github.com/ashtagmujib/room-landing-page"> <div id="code">view code</div> </a>
+                        <a href="https://ashtagmujib.github.io/room-landing-page"> <div id="live-site"> view site</div> </a>
                     </div>
                 </div>
                 
