--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A front-end web developer, who loves building user-friendly websites with html5, css and vanila javascript">
     <link rel="stylesheet" href="./style.css">
     <title> portfolio </title>
 </head>
