--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <li>html</li>
                 <li>css</li>
                 <li>javascript</li>
+                <li>adobe&nbsp;xd</li>
             </ul>
         </section>
         <!--div> end of my-skills section </div-->
@@ -177,11 +178,6 @@
                     </div>
                 </div>
                 
-            </div>
-
-            <div class="slide-direction">
-                <span></span>
-                <span></span>
             </div>
         </section>
         <!--div> </div-->
