--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale =1.0, user-scalable = no">
     <meta name="description" content="A front-end web developer, who loves building user-friendly websites with html5, css and vanila javascript">
     <link rel="stylesheet" href="./style.css">
     <title> portfolio </title>
